--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 /******************************************************************
-Theme Name: Foundation 6.6.3
+Theme Name: Calvin Custom Theme
 Description: Uses Foundation 6.  DO NOT PUT STYLES IN THIS FILE. SEE README.md
 ******************************************************************/
