--- a/assets/src/scss/_settings.scss
+++ b/assets/src/scss/_settings.scss
@@ -66,8 +66,8 @@
 // ---------
 
 $global-font-size: 100%;
-$global-width: rem-calc(1440);
-$global-lineheight: 1.5;
+$global-width: rem-calc(1920);
+$global-lineheight: inherit;
 $foundation-palette: (
   primary: #1779ba,
   secondary: #767676,
@@ -107,10 +107,10 @@ $print-hrefs: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
-  large: 1024px,
-  xlarge: 1200px,
-  xxlarge: 1440px,
+  medium: 768px,
+  large: 1280px,
+  xlarge: 1440px,
+  xxlarge: 1920px,
 );
 $breakpoints-hidpi: (
   hidpi-1: 1,
@@ -144,7 +144,7 @@ $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-color: inherit;
 $header-lineheight: 1.4;
-$header-margin-bottom: 0.5rem;
+$header-margin-bottom: 1rem;
 $header-styles: (
   small: (
     'h1': ('font-size': 24),
@@ -890,9 +890,9 @@ $grid-margin-gutters: (
 );
 $grid-padding-gutters: $grid-margin-gutters;
 $grid-container-padding: (
-  small: 40px,
-  medium: 100px,
-  large: 160px
+  small: 32px,
+  medium: 80px,
+  large: 128px
 );
 $grid-container-max: $global-width;
 $xy-block-grid-max: 8;
