--- a/assets/src/scss/_typography.scss
+++ b/assets/src/scss/_typography.scss
@@ -5,3 +5,32 @@ p {
 h1 {
   @include fluid-type(30px, 60px);
 }
+
+.cancel-last-margin {
+  h1, h2, h3, h4, h5, p, ul {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.cta, .button, button {
+  background-color: var(--color-secondary);
+  border: 1px solid var(--color-secondary);
+  color: var(--color-background);
+  @include fluid-props(12px,20px,padding-top);
+  @include fluid-props(16px,28px,padding-left);
+  @include fluid-props(12px,20px,padding-bottom);
+  @include fluid-props(16px,28px,padding-right);
+  display: inline-block;
+  line-height: 1 !important;
+}
+
+.no-touchevents {
+  .cta, .button, button {
+    &:hover, &:active, &:focus {
+      background-color: var(--cta-color);
+      color: var(--cta-bg-color);
+    }  
+  }
+}
