--- a/assets/src/scss/_main.scss
+++ b/assets/src/scss/_main.scss
@@ -8,14 +8,121 @@ html {
   width: 100%;
 }
 
+header, footer, .mobile-navigation {
+  .menu-item a {
+    &, &:hover, &:focus, &:active {
+      color: inherit;
+    }  
+  }
+}
+
+header, .mobile-navigation {
+  @include fluid-props(24px,42px,padding-top);
+  @include fluid-props(24px,42px,padding-bottom);  
+  .logo {
+    @include fluid-props(32px,75px,height);
+  }
+  .socmed-item {
+    font-size: 32px;
+  }
+  .menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+}
+
 header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 101;
+  transition: background-color 500ms, transform 250ms;
+	&.headroom--unpinned {
+		transform: translateY(-100%);
+	}
+  &.headroom--top {
+    // background-color: transparent;
+  }
+  .menu {
+    column-gap: #{$hs-unit};
+  }
+}
+
+.menu-toggle {
+  font-size: 32px;
+  margin-right: calc(0.5 * #{map-get($grid-container-padding,small)});
+  &, &:hover, &:active, &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.mobile-navigation {
+  position: fixed;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 101;
+  transition: top 1000ms ease;
+  &.is-active {
+    top: 0;
+  }
+  .logo {
+    opacity: 0;
+    pointer-events: none;
+  }
+  .close-button-container {
+    @include fluid-props(24px,42px,padding-bottom);  
+  }
+  .menu {
+    flex-direction: column;
+    row-gap: #{0.5 *$hs-unit};
+  }
 }
 
 footer {
+  .logo {
+    @include fluid-props(100px, 225px, width);
+  }
+  .footer-center {
+    .subtitle {
+      margin-bottom: 8px;      
+    }
+    .socmed-item {
+      font-size: 32px;
+    }
+    @include breakpoint(small only) {
+      > div:last-child {
+        margin-bottom: 0;
+      }  
+    }
+    @include breakpoint(medium) {
+      max-width: 700px;
+      margin: 0 auto;
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: #{2 * $hs-unit};
+      > div {
+        flex: 0 0 calc(33.3333% - #{1.5 * $hs-unit} + 5px);
+      }
+      .subtitle {
+        margin-bottom: 16px;
+      }
+    }
+  }
+}
+
+.socmed-container {
+  .socmed-item {
+    display: inline-block;
+    margin-right: 20px;
+    a, a:focus, a:active {
+      color: var(--accent-color);
+    }
+  }
 }
 
 .hero-title {
@@ -37,9 +144,9 @@ footer {
         top: -100%;
       }
       input, textarea {
-        background-color: var(--cta-color);
-        color: var(--cta-bg-color);
-        border: 1px solid var(--cta-bg-color);
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        border: 1px solid var(--text-color);
         border-radius: 0;
         padding: 12px;
         line-height: 1 !important;
