--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /******************************************************************
 Theme Name: Calvin Custom Theme
+Version: 1.0.1
 Description: Uses Foundation 6.  DO NOT PUT STYLES IN THIS FILE. SEE README.md
 ******************************************************************/
