--- a/assets/src/scss/_blocks.scss
+++ b/assets/src/scss/_blocks.scss
@@ -16,12 +16,8 @@
 
 .block-text {
   @include breakpoint(medium) {
-    height: 500px;
-    > .grid-container {
-      height: 100%;
-      > .grid-x {
-        height: 100%;
-      }
+    .cell {
+      min-height: 500px;
     }
   }
 }
