--- a/assets/src/scss/_typography.scss
+++ b/assets/src/scss/_typography.scss
@@ -1,11 +1,3 @@
-p {
-  @include fluid-type(16px, 18px);
-}
-
-h1 {
-  @include fluid-type(30px, 60px);
-}
-
 .cancel-last-margin {
   h1, h2, h3, h4, h5, p, ul {
     &:last-child {
@@ -23,17 +15,26 @@ h1 {
   background-color: var(--button-bg-color);
   border: 1px solid var(--button-bg-color);
   color: var(--button-color);
-  @include fluid-props(12px,20px,padding-top);
-  @include fluid-props(16px,28px,padding-left);
-  @include fluid-props(12px,20px,padding-bottom);
-  @include fluid-props(16px,28px,padding-right);
-  display: inline-block;
-  line-height: 1 !important;
   transition: background-color 250ms;
 }
 
 hr {
   border-color: var(--text-color);
+}
+
+
+p:empty {
+  display: none;
+}
+
+.inherit-a-color {
+  a, a:hover, a:active, a:focus {
+    color: inherit;
+  }
+}
+
+.color-accent {
+  color: var(--accent-color);
 }
 
 .no-touchevents {
