--- a/assets/src/scss/_settings.scss
+++ b/assets/src/scss/_settings.scss
@@ -234,18 +234,18 @@ $input-error-font-weight: $global-weight-bold;
 // 7. Accordion
 // ------------
 
-$accordion-background: $white;
-$accordion-plusminus: true;
+$accordion-background: inherit;
+$accordion-plusminus: false;
 $accordion-plus-content: '\002B';
 $accordion-minus-content: '\2013';
-$accordion-title-font-size: rem-calc(12);
-$accordion-item-color: $primary-color;
-$accordion-item-background-hover: $light-gray;
-$accordion-item-padding: 1.25rem 1rem;
-$accordion-content-background: $white;
-$accordion-content-border: 1px solid $light-gray;
-$accordion-content-color: $body-font-color;
-$accordion-content-padding: 1rem;
+$accordion-title-font-size: inherit;
+$accordion-item-color: inherit;
+$accordion-item-background-hover: inherit;
+$accordion-item-padding: 0;
+$accordion-content-background: transparent;
+$accordion-content-border: none;
+$accordion-content-color: inherit;
+$accordion-content-padding: 0;
 
 // 8. Accordion Menu
 // -----------------
