--- a/assets/src/scss/_main.scss
+++ b/assets/src/scss/_main.scss
@@ -72,6 +72,12 @@ body {
   }
 }
 
+.hero.slider {
+  .flickity-prev-next-button {
+    display: none;
+  }
+}
+
 .outer-container {
   position: relative;
   &.with-sidebar {
