--- a/assets/src/scss/_typography.scss
+++ b/assets/src/scss/_typography.scss
@@ -22,6 +22,13 @@ hr {
   border-color: var(--text-color);
 }
 
+.ph, .ph-light, .ph-thin, .ph-fill {
+  line-height: inherit;
+  font-size: 125%;
+  &.reset-icon-size {
+    font-size: inherit;
+  }
+}
 
 p:empty {
   display: none;
@@ -35,6 +42,11 @@ p:empty {
 
 .color-accent {
   color: var(--accent-color);
+}
+
+.cta-link {
+  display: flex;
+  align-items: center;
 }
 
 .no-touchevents {
